syntax = "proto2";

package LoginInfo;

message Credential {
  required string username = 1;
  required string password = 2;
}
